config/networkpolicy/hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: system
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: nginxdemos/hello
