config/networkpolicy/hello_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: system
spec:
  selector:
    app: hello
  ports:
  - protocol: TCP
    port: 80
