config/networkpolicy/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-internal-egress
  namespace: system
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress:
  - to:
    - ipBlock:
       cidr: 0.0.0.0/0
       except:
       - 10.0.0.0/8
       - 172.16.0.0/12
       - 192.168.0.0/16
